--- a/src/app/master/customer/customer-edit/customer-edit.component.html
+++ b/src/app/master/customer/customer-edit/customer-edit.component.html
@@ -75,7 +75,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Credit-Limit</label>
           <div class="col-sm-8">
-            <app-input formControlName="cust_credit_limit" type="number" [dec]="2"></app-input>
+            <app-input formControlName="cust_credit_limit" type="number" [dec]="2" align="right"></app-input>
           </div>
         </div>
 
