--- a/src/styles.css
+++ b/src/styles.css
@@ -132,6 +132,18 @@ i {
 
 
 
+.right-align {
+  text-align: right;
+}
+
+.center-align {
+  text-align: center;
+}
+
+.left-align {
+  text-align: left;
+}
+
 
 
 
