--- a/src/app/master/customer/customer-edit/customer-edit.component.html
+++ b/src/app/master/customer/customer-edit/customer-edit.component.html
@@ -79,6 +79,13 @@
           </div>
         </div>
 
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm">Est-Date</label>
+          <div class="col-sm-8">
+            <app-date formControlName="cust_est_dt" [format]="gs.globalConstants.global_date_format"></app-date>
+          </div>
+        </div>
+
 
       </div>
 
