--- a/src/app/marketing/qtnmlcl/qtnmlcl-search/qtnmlcl-search.component.html
+++ b/src/app/marketing/qtnmlcl/qtnmlcl-search/qtnmlcl-search.component.html
@@ -18,7 +18,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Quote To</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="qtnm_to_name"> </app-input>
+          <app-input type="text" formControlName="qtnm_to_name" case="UPPER"> </app-input>
         </div>
       </div>
       <div class="form-group row">
@@ -30,7 +30,7 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-label-sm" for="">Place Of Delivery</label>
         <div class="col-sm-8">
-          <app-input type="text" formControlName="qtnm_pld_name"> </app-input>
+          <app-input type="text" formControlName="qtnm_pld_name" case="UPPER"> </app-input>
         </div>
       </div>
 
