--- a/src/app/marketing/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
+++ b/src/app/marketing/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
@@ -16,8 +16,9 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Quote #</label>
           <div class="col-sm-8">
-            <app-input maxlength="15" formControlName="qtnm_no" [case]="'UPPER'" id="qtnm_code" name="qtnm_code"
+            <app-input maxlength="15" formControlName="qtnm_no" [case]="'UPPER'" id="qtnm_no" name="qtnm_no"
               [disable]="true"></app-input>
+            <!--  -->
           </div>
         </div>
       </div>
@@ -30,9 +31,10 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Quote to</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="qtnm_to_id" id="qtnm_to_id" (CallBack)="callBack($event)"
+            <auto-complete formControlName="qtnm_to_code" id="qtnm_to_code" (CallBack)="callBack($event)"
               [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'code','value':'cust_id'},{'caption':'name','value':'cust_name'},{'caption':'address','value':'cust_address1'}]"></auto-complete>
+              display_column="[{'caption':'code','value':'cust_code'},{'caption':'name','value':'cust_name'}]">
+            </auto-complete>
           </div>
         </div>
 
@@ -128,30 +130,30 @@
         <div class="form-group row">
           <label class="col-sm-2 form-label form-lable-sm">KGS</label>
           <div class="col-sm-4">
-            <app-input formControlName="qtnm_kgs" type="number" name="qtnm_kgs"
-              [dec]="gs.globalConstants.global_dec_places" (blur)="findAmt($event)"></app-input>
+            <app-input formControlName="qtnm_kgs" type="number" name="qtnm_kgs" [dec]="iDec" (blur)="findUnit($event)"
+              [showZero]="true"></app-input>
           </div>
           <!-- (blur)="findTotal($event) -->
 
           <label class="col-sm-2 form-label form-lable-sm">LBS</label>
           <div class="col-sm-4">
-            <app-input formControlName="qtnm_lbs" type="number" name="qtnm_lbs"
-              [dec]="gs.globalConstants.global_dec_places" (blur)="findAmt($event)"></app-input>
+            <app-input formControlName="qtnm_lbs" type="number" name="qtnm_lbs" [dec]="iDec" (blur)="findUnit($event)"
+              [showZero]="true"></app-input>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-2 form-label form-lable-sm">CBM</label>
           <div class="col-sm-4">
-            <app-input formControlName="qtnm_cbm" type="number" name="qtnm_cbm"
-              [dec]="gs.globalConstants.global_dec_places" (blur)="findAmt($event)"></app-input>
+            <app-input formControlName="qtnm_cbm" type="number" name="qtnm_cbm" [dec]="iDec" (blur)="findUnit($event)"
+              [showZero]="true"></app-input>
           </div>
 
 
           <label class="col-sm-2 form-label form-lable-sm">CFT</label>
           <div class="col-sm-4">
-            <app-input formControlName="qtnm_cft" type="number" name="qtnm_cft"
-              [dec]="gs.globalConstants.global_dec_places" (blur)="findAmt($event)"></app-input>
+            <app-input formControlName="qtnm_cft" type="number" name="qtnm_cft" [dec]="iDec" (blur)="findUnit($event)"
+              [showZero]="true"></app-input>
           </div>
         </div>
       </div>
@@ -163,9 +165,9 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Place Of Receipt</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="qtnm_por_id" id="qtnm_por_id" (CallBack)="callBack($event)"
+            <auto-complete formControlName="qtnm_por_code" id="qtnm_por_code" (CallBack)="callBack($event)"
               [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'code','value':'param_id'},{'caption':'name','value':'param_name'}]"></auto-complete>
+              display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
           </div>
         </div>
 
@@ -178,9 +180,9 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Port Of Loading</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="qtnm_pol_id" id="qtnm_pol_id" (CallBack)="callBack($event)"
+            <auto-complete formControlName="qtnm_pol_code" id="qtnm_pol_code" (CallBack)="callBack($event)"
               [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'code','value':'param_id'},{'caption':'name','value':'param_name'}]"></auto-complete>
+              display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
           </div>
         </div>
 
@@ -193,9 +195,9 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Discharge Port</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="qtnm_pod_id" id="qtnm_pod_id" (CallBack)="callBack($event)"
+            <auto-complete formControlName="qtnm_pod_code" id="qtnm_pod_code" (CallBack)="callBack($event)"
               [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-              display_column="[{'caption':'code','value':'param_id'},{'caption':'name','value':'param_name'}]"></auto-complete>
+              display_column="[{'caption':'code','value':'param_code'},{'caption':'name','value':'param_name'}]"></auto-complete>
           </div>
         </div>
 
@@ -234,10 +236,8 @@
       </div>
     </div>
   </div>
-
+  
   <!--body-->
-
-
   <div class="page-body">
     <div class="row">
       <div class="col-md-12">
@@ -256,23 +256,23 @@
             </tr>
           </thead>
 
-          <tbody formArrayName="qtnm_qtnd_lcl">
-            <tr *ngFor="let iRow of formArray('qtnm_qtnd_lcl').controls; let i=index;" [formGroupName]="i">
+          <tbody formArrayName="qtnd_lcl">
+            <tr *ngFor="let iRow of formArray('qtnd_lcl').controls; let i=index;" [formGroupName]="i">
               <td *ngIf="showModel">
-                <label>{{iRow.get('qtnd_pkid')?.value}}</label>
+                <label>{{iRow.get('qtnd_id')?.value}}</label>
               </td>
               <td>
-                <auto-complete formControlName="qtnd_acc_id" id="qtnd_acc_id-{{i}}" name="qtnd_acc_id"
-                  fieldName="qtnd_acc_id" [rowIndex]="i" (CallBack)="callBack($event)" [table]="'acctm'"
+                <auto-complete formControlName="qtnd_acc_code" id="qtnd_acc_code-{{i}}" name="qtnd_acc_code"
+                  fieldName="qtnd_acc_code" [rowIndex]="i" (CallBack)="callBack($event)" [table]="'acctm'"
                   [company_id]="getCompanyId()" [url]="url"
-                  display_column="[{'caption':'ID','value':'acc_id'},{'caption':'CODE','value':'acc_code'},{'caption':'name','value':'acc_name'}]" required></auto-complete>
+                  display_column="[{'caption':'ID','value':'acc_id'},{'caption':'CODE','value':'acc_code'},{'caption':'name','value':'acc_name'}]"></auto-complete>
               </td>
               <td>
-                <app-input formControlName="qtnd_acc_name" [rowIndex]="i" name="qtnd_acc_name"></app-input>
+                <app-input formControlName="qtnd_acc_name" [rowIndex]="i" name="qtnd_acc_name" case="UPPER"></app-input>
               </td>
               <td>
                 <app-input formControlName="qtnd_amt" [rowIndex]="i" name="qtnd_amt"
-                  [dec]="gs.globalConstants.global_dec_places" type="number"></app-input>
+                  [dec]="gs.globalConstants.global_dec_places" type="number" (blur)="findUnit($event)"></app-input>
               </td>
               <td>
                 <app-input formControlName="qtnd_per" [rowIndex]="i" name="qtnd_per" maxlength="50"
@@ -293,9 +293,30 @@
       </div>
     </div>
 
-    <div class="row" *ngIf="formArray('qtnm_qtnd_lcl').length <= 0">
+
+    <div class="row" *ngIf="formArray('qtnd_lcl').length <= 0">
       <div class="col-md-12 text-center">
         <button class="btn btn-sm btn-info" (click)="addQuote()">Add Quote</button>
+      </div>
+    </div>
+    <!-- <div class="row">
+      <div class="col-md-12">
+        <button class="btn btn-sm btn-success" (click)="addQuote()">Add</button>
+      </div>
+    </div> -->
+  </div>
+  <div class="page-body">
+
+    <div class="row">
+
+      <div class="col-sm-6">
+
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">Total</label>
+          <div class="col-sm-8">
+            <app-input maxlength="15" formControlName="qtnm_amt" id="qtnm_amt" [disable]="true"></app-input>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -314,19 +335,3 @@
     {{mform.value | json}}
   </pre>
 </div>
-
-
-
-
-
-<!-- <div class="form-group row">
-  <label class="col-3 col-form-label col-form-label-sm">KGS</label>
-  <div class="col-4 input-group input-group-sm">
-    <input type="number" maxlength="15" class="form-control form-control-sm ng-pristine ng-valid ng-touched">
-    <i aria-hidden="true" class="fa fa-arrow-right mt-2" style="color: teal; cursor: pointer;"></i>
-  </div>
-  <div class="col-5 input-group input-group-sm">
-    <label class="col-form-label col-form-label-sm mr-2">LBS</label>
-    <input type="number" maxlength="15" class="form-control form-control-sm ng-untouched ng-pristine ng-valid"><i aria-hidden="true" class="fa fa-arrow-left mt-2" style="color: teal; cursor: pointer;"></i>
-  </div>
-</div> -->
