--- a/src/app/Marketing/qtnm/qtnd-edit/qtnd-edit.component.html
+++ b/src/app/Marketing/qtnm/qtnd-edit/qtnd-edit.component.html
@@ -51,7 +51,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_carrier_name" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="qtnd_carrier_name" [case]="'UPPER'"></app-input>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">T/T</label>
           <div class="col-sm-8">
@@ -74,23 +74,23 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">ROUTING</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="qtnd_routing" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="100" formControlName="qtnd_routing" [case]="'UPPER'" ></app-input>
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">CNTR.TYPE</label>
           <div class="col-sm-8">
-            <app-input maxlength="6" formControlName="qtnd_cntr_type" [case]="'UPPER'" required></app-input>
+            <app-input maxlength="6" formControlName="qtnd_cntr_type" [case]="'UPPER'" ></app-input>
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">ETD </label>
           <div class="col-sm-8">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">CUTT.OFF</label>
           <div class="col-sm-8">
@@ -117,7 +117,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">OF</label>
           <div class="col-sm-8">
@@ -126,7 +126,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">PSS</label>
           <div class="col-sm-8">
@@ -135,7 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">BAF</label>
           <div class="col-sm-8">
@@ -144,7 +144,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">ISPS</label>
           <div class="col-sm-8">
@@ -153,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">HAULAGE</label>
           <div class="col-sm-8">
@@ -162,7 +162,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
+      <div class="col-sm-4">
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">IFS</label>
           <div class="col-sm-8">
@@ -171,7 +171,28 @@
           </div>
         </div>
       </div>
-
+      <div class="col-sm-4">
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+          <div class="col-sm-8">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+          <div class="col-sm-8">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="form-group row">
+          <label class="col-sm-4 form-label form-lable-sm" for="">TOTAL</label>
+          <div class="col-sm-8">
+            <app-input maxlength="15" formControlName="qtnd_tot_amt" [disable]="true"></app-input>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-sm-12">
@@ -194,19 +215,12 @@
         <div class="form-group row">
           <div class="col-sm-6">
             <button class="btn btn-sm btn-success me-2" (click)="search('search')" [disabled]="mform.invalid">{{ mode
-              === 'new' ? 'Add-Record' : 'Edit-Record'}}</button>
-            <button class="btn btn-success btn-sm " (click)="newRecord()">Clear</button>
+              === 'new' ? 'Add' : 'Update'}}</button>
+            <button class="btn btn-success btn-sm " (click)="newRecord()">New</button>
           </div>
         </div>
       </div>
-      <div class="col-sm-2">
-        <div class="form-group row">
-          <label class="col-sm-4 form-label form-lable-sm" for="">TOTAL</label>
-          <div class="col-sm-8">
-            <app-input maxlength="15" formControlName="qtnd_tot_amt" [disable]="true"></app-input>
-          </div>
-        </div>
-      </div>
+
     </div>
   </div>
 </form>
